# pyalea

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pytest.yml
alps/: CMakeLists.txt  alea.cpp  py_autocorr.hpp  py_mean.hpp  py_var.hpp
cmake/: pybind11.cmake
example/cxx/: CMakeLists.txt  example.cpp  example1.cpp  example2.cpp  example3.cpp  ising.cpp
example/python/: CMakeLists.txt  autocorr.py  batch.py  ising.py  mean.py  var.py
src/: CMakeLists.txt
src/alps/: CMakeLists.txt  alea.cpp  py_batch.hpp  py_mean.hpp  py_var.hpp
src/pyalea/: CMakeLists.txt  __init__.py  alea.cpp  py_autocorr.hpp  py_batch.hpp  ternary.hpp
test/: CMakeLists.txt  test_autocorr.py  test_batch.py  test_mean.py  test_var.py
