[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pyalea"
version = "0.0.1"
description="Python bindings for alpscore::alea"
readme = "README.md"
authors = [
  { name = "Synge Todo", email = "wistaria@phys.s.u-tokyo.ac.jp" },
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[tool.scikit-build]
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
cmake.verbose = true

[tool.black]
target-version = ["py38"]
include = '\.py$'

[tool.ruff]
target-version = "py38"
select = ["E", "F", "I"]
