set(PROGS example1 example2 example3 ising)
foreach(name ${PROGS})
  set(target_name cxx_${name})
  add_executable(${target_name} ${name}.cpp)
  target_link_libraries(${target_name} PUBLIC alps::alps-alea)
  set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${name})
  add_test(${target_name} ${name})
endforeach(name)
